<resources>


    <!-- TODO: Remove or change this placeholder text -->

    <string name="MyFocus">关注</string>
    <string name="work">作品</string>
    <string name="dynamic">动态</string>
    <string name="like">喜欢</string>
    <string name="Recommand">推荐</string>
    <string name="login">登陆</string>
    <string name="logout">注销</string>
    <string name="cd_home">首页</string>
    <string name="title_home">首页</string>
    <string name="cd_shop">周边</string>
    <string name="cd_list">发布</string>
    <string name="title_list">发布</string>
    <string name="title_shop">周边</string>
    <string name="cd_mine">我的</string>
    <string name="title_mine">我的</string>
    <string name="title_message">消息</string>
    <string name="cd_message">消息</string>
    <string name="share">分享</string>
    <string name="back">返回</string>
    <string name="more">更多</string>
    <string name="menu">菜单</string>
    <string name="defaultName">小王</string>
    <string name="account">账号:</string>
    <string name="age">岁</string>
    <string name="fans">粉丝</string>
    <string name="focus">关注</string>
    <string name="likes">获赞</string>
    <string name="contact">私信</string>
    <string name="comments">评论...</string>
    <string name="recommand">推荐</string>
    <string name="our_code">我的二维码</string>
    <string name="userinfo">基本信息</string>
    <string name="our_wallet">我的钱包</string>
    <string name="setting">设置</string>
    <string name="sex">性别</string>
    <string name="getCode">点击获取验证码</string>
    <string name="register">注册</string>
    <string name="forget">找回密码</string>
    <string name="atFriend">\@ 好友</string>
    <string name="topic"># 话题</string>
    <string name="publish_note">发现了啥新鲜事？说出来让大家也来一起听听...</string>
    <string name="publish">发布</string>






    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="giraffe_player_url_empty">请指定播放视频的地址</string>
    <string name="small_problem">出了点小问题,稍后重试</string>
    <string name="can_not_play">不能播放此视频</string>
    <string name="not_support">播放器不支持此设备</string>
    <string name="player_not_wifi">您正在使用移动网络播放视频\n可能产生较高流量费用</string>

    <string name="NBA">NBA是美国职业篮球联赛（National Basketball Association）的简称，于1946年6月6日在纽约成立，是由北美三十支队伍组成的男子职业篮球联盟，美国四大职业体育联盟之一。其中诞生了迈克尔·乔丹、科比·布莱恩特、勒布朗·詹姆斯等球星，是世界上水平最高的篮球赛事。
NBA的三十支球队分属两个联盟：东部联盟和西部联盟，每个联盟由三个赛区组成，每个赛区有五支球队。
NBA在每年的赛程开始之前会安排选秀与热身的季前赛；随后是常规赛，从每年的10月底开始，到次年的4月中旬结束[1]  ；而季后赛（NBA Playoffs）在每年4月下旬开始，在最后决出东西部分区冠军晋级总决赛，七局四胜者为当赛季总冠军，总冠军球队中表现最优秀的球员获得总决赛MVP荣誉。此外，还有全明星赛（All-star Game）作为一项表演性质的赛事存在，时间不定，为期三天。</string>
    <string name="clean">清除缓存</string>
    <string name="leftComments">留下您的精彩评论吧</string>
    <string name="introduce">有一次，在我参加的一个晚会上，主持人问一个小男孩：你长大以后要做什么样的人？孩子看看我们这些企业家，然后说：做企业家。在场的人忽地笑着鼓起了掌。我也拍了拍手，但听着并不舒服。我想，这孩子对于企业究竟知道多少呢？他是不是因为当着我们的面才说要当企业家的呢？他是不是受了大人的影响，以为企业家风光，都是有钱的人，才要当企业家的呢？ 这一切当然都是一个谜。但不管怎样，作为一个人的人生志向，我以为当什么并不重要；不管是谁，最重要的是从小要立志做一个努力的人。 我小的时候也曾有人问过同样的问题，我的回答不外乎当教师、解放军和科学家之类。时光一晃流走了二十多年，当年的孩子，如今已是四十出头的大人。但仔细想一想，当年我在大人们跟前表白过的志向，实际一个也没有实现。我身边的其他人差不多也是如此。有的想当教师，后来却成了个体户；想当解放军的，有人竟做了囚犯。我上大学时有两个同窗好友，他们现在都是我国电子行业里才华出众的人，一个成长为“康佳”集团的老总，一个领导着TCL集团。我们三个不期而然地成为中国彩电骨干企业的经营者，可是当年大学毕业时，无论有多大的想像力，我们也不敢想十几年后会成现在的样子。一切都是我们在奋斗中见机行事，一步一步努力得来的。与其说我们是有理想的人，不如说我们是一直在努力的人。 并非我们不重视理想，而是因为树雄心壮志易，为理想努力难，人生自古就如此。有谁会想到，十多年前的今天，我曾是一个在街头彷徨，为生存犯愁的人？当时的我，一无所有，前途渺茫，真不知路在何处。然而，我却没有灰心失望，回想起来，支撑着我走过这段坎坷岁月的正是我的意志品格。当许多人以为我已不行、该不行了的时候，我仍做着从地上爬起来的努力，我坚信人生就像马拉多纳踢球，往往是在快要倒下去的时候“进球”获得生机的。事实也正是如此，就在“山重水复疑无路”的时候，香港一家企业倒闭给了我东山再起的机会，使我能够与掌握世界最新技术的英国科技人员合作，开发技术先进的彩色电视机，从此一举走出困境。 有人说，“努力”与“拥有”是人生一左一右的两道风景。但我以为，人生最美最不能逊色的风景应该是努力。努力是人生的一种精神状态，是对生命的一种赤子之情。努力是拥有之母，拥有是努力之子。一心努力可谓条条大路通罗马，只想获取可谓道路逼仄，天地窄小。所以，与其规定自己一定要成为一个什么样的人物，获得什么东西，不如磨练自己做一个努力的人。志向再高，没有努力，志向终难坚守；没有远大目标，因为努力，终会找到奋斗的方向。做一个努力的人，可以说是人生最切实际的目标，是人生最大的境界。 许多人因为给自己定的目标太高太功利，因为难以成功而变得灰头土脸，最终灰心失望。究其原因，往往就是因为太关注拥有，而忽略做一个努力的人。对于今天的孩子们，如果只关注他们将来该做个什么样的人物，不把意志品质作为一个做人的目标提出来，最终我们只能培养出狭隘、自私、脆弱和境界不高的人。遗憾的是，我们在这方面做得并不尽如人意。</string>
    <string name="brief">介绍下自己吧...</string>
    <string name="address">你的地址...</string>
</resources>
