<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
<group android:checkableBehavior="single"
    >
      <item android:id="@+id/user_info"
          android:icon="@drawable/userinfo"
          android:title="@string/userinfo"
          />
    <item android:id="@+id/user_code"
        android:icon="@drawable/code"
        android:title="@string/our_code"
        />
    <item android:id="@+id/user_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/our_wallet"
        />
    <item android:id="@+id/setting"
        android:icon="@drawable/setting"
        android:title="@string/setting"
        />

    <item android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        />

</group>
</menu>