<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <data>
            <import type="com.bignerdranch.travelcommunity.adapters.Coverters"/>
            <variable
            name="user"
            type="com.bignerdranch.travelcommunity.data.db.entity.User" />

            <variable
                name="viewModel"
                type="com.bignerdranch.travelcommunity.ui.user.UserViewModel" />
        </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/userPageMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context="com.bignerdranch.travelcommunity.ui.user.UserFragment"
            tools:ignore="MergeRootFrame"
          >

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/user_view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                />



            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/user_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:stateListAnimator="@animator/show_toolbar"
                android:animateLayoutChanges="true"
                >

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/user_toolbar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="@color/tab_unSelect_color"
                    app:statusBarScrim="@color/tab_unSelect_color"
                    app:collapsedTitleGravity="center"
                    app:collapsedTitleTextAppearance="@color/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:titleEnabled="false"
                    app:toolbarId="@id/userToolbar">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">


                            <ImageView
                                android:id="@+id/backgroundImageUrl"
                                android:layout_width="400dp"
                                android:layout_height="250dp"
                                android:layout_gravity="center"
                                android:layout_marginEnd="11dp"
                                android:background="@mipmap/abc"
                                imageFromUrl="@{user.backgroundImageUrl}"
                                android:fitsSystemWindows="true"
                                android:scaleType="fitXY"
                                app:layout_collapseMode="parallax"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="1.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <LinearLayout
                                android:id="@+id/user_operate_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginBottom="12dp"
                                android:orientation="horizontal"
                                app:layout_constraintBottom_toTopOf="@+id/view"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/backgroundImageUrl">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/userHeadPortraitUrl"
                                    imageFromUrl="@{user.headPortraitUrl}"
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_gravity="center"
                             />

                                <Button
                                    android:id="@+id/focus_me"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="@dimen/userPage_textMargin"
                                    android:text="@string/MyFocus"
                                         />

                                <Button
                                    android:id="@+id/contanct_me"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="@dimen/userPage_textMargin"
                                    android:text="@string/contact"
                                   />

                            </LinearLayout>


                            <View
                                android:id="@+id/view"
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                app:layout_constraintBottom_toTopOf="@+id/description"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/user_operate_group" />

                            <LinearLayout
                                android:id="@+id/description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/userPage_textMargin"
                                android:layout_marginTop="@dimen/userPage_layout_margin"
                                android:orientation="vertical"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/user_operate_group">

                                <TextView
                                    android:id="@+id/nickName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/userPage_textMargin"
                                    android:textAppearance="@style/UserDescriptionText"
                                    android:text="@{user.nickName}"
                                    tools:text="昵称"
                                    />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/userPage_textMargin"
                                    android:orientation="horizontal"
                                    >

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/account"
                                         />

                                    <TextView
                                        android:id="@+id/account"

                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{user.account}" />

                                </LinearLayout>

                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:layout_marginTop="@dimen/split_line"
                                    android:layout_marginBottom="@dimen/split_line"
                                    android:background="@color/black"
                                    />

                                <TextView
                                    android:id="@+id/introduce"
                                    android:textAppearance="@style/UserDescriptionText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/userPage_textMargin"
                                    android:text="@{user.introduce}"
                                    tools:text="介绍"
                                    />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/userPage_layout_margin"
                                    android:layout_marginBottom="@dimen/userPage_layout_margin"
                                    android:orientation="horizontal"
                                    >

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="@dimen/userPage_textMargin"
                                        android:layout_marginEnd="@dimen/userPage_textMargin"
                                        calcSex="@{user.sex}"
                                        android:contentDescription="@string/sex" />

                                <TextView
                                    android:id="@+id/age"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{Coverters.fromIntToString(user.age)}"
                                    tools:text="20"
                                    />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/userPage_textgroup_Margin"
                                    android:text="@string/age" />

                                <TextView
                                    android:id="@+id/address"
                                    android:layout_marginStart="@dimen/userPage_textMargin"
                                    android:layout_marginEnd="@dimen/userPage_textgroup_Margin"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{user.address}"
                                    />
                                </LinearLayout>



                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/userPage_textMargin"
                                    android:layout_marginBottom="@dimen/userPage_layout_margin"
                                    android:orientation="horizontal"
                                    >

                                 <TextView
                                     android:id="@+id/likeTotal"
                                     android:layout_width="wrap_content"
                                     android:textAppearance="@style/UserDescriptionText"
                                     android:layout_height="wrap_content"
                                     android:text="@{user.likeTotal}"
                                     />

                                <TextView

                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/userPage_textMargin"
                                    android:layout_marginEnd="@dimen/userPage_textgroup_Margin"
                                    android:text="@string/likes"
                                    />
                                    <TextView
                                        android:id="@+id/fansTotal"
                                        android:textAppearance="@style/UserDescriptionText"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{user.fansTotal}"
                                        />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="@dimen/userPage_textMargin"
                                        android:layout_marginEnd="@dimen/userPage_textgroup_Margin"
                                        android:text="@string/fans"
                                        />

                                    <TextView
                                        android:id="@+id/focusTotal"
                                        android:textAppearance="@style/UserDescriptionText"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{user.focusTotal}"
                                        />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="@dimen/userPage_textMargin"
                                        android:layout_marginEnd="@dimen/userPage_textgroup_Margin"
                                        android:text="@string/focus"
                                        />

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </LinearLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/userToolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@android:color/transparent"
                        app:contentInsetStartWithNavigation="0dp"
                        app:layout_collapseMode="pin"
                        app:navigationIcon="@drawable/back_white" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            >
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/UserDescriptionText"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/userPage_textMargin"
                                android:text="@{user.nickName}"
                                />

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:textAppearance="@style/UserDescriptionText"
                                android:layout_margin="@dimen/userPage_textMargin"
                                android:text="@string/MyFocus"
                                />

                            <ImageView
                                android:id="@+id/user_menu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0"
                                android:layout_gravity="center"
                                android:onClick="@{()->viewModel.openMenu()}"
                                android:layout_margin="@dimen/userPage_layout_margin"
                                android:src="@drawable/user_menu_white_"
                                />
                        </LinearLayout>

                    </androidx.appcompat.widget.Toolbar>


                </com.google.android.material.appbar.CollapsingToolbarLayout>




                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/user_tabs"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    style="@style/UserTabLayoutStyle"
                  />

            </com.google.android.material.appbar.AppBarLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

  <com.google.android.material.navigation.NavigationView
      android:id="@+id/menu_nav"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      app:menu="@menu/user_menu"
      app:itemTextAppearance="@style/UserDescriptionText"
      app:headerLayout="@layout/user_head_layout"
      />

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>